Reset deltaspike to 1.0.1 do your own migration to jakarta