@@ -101,8 +101,7 @@
                             <!-- Sets the VM argument line used when unit tests are run. -->
                             <!--argLine> - -add-modules java.xml,java.sql -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006</argLine-->
                             <argLine>
-                                -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006 --add-opens
-                                java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
+                                -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5006
                             </argLine>
                         </configuration>
                     </plugin>
